--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "@tanstack/react-query": "^5.29.2",
     "axios": "^1.6.8",
     "expo": "~50.0.14",
     "expo-secure-store": "~12.8.1",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@tanstack/eslint-plugin-query": "^5.28.11",
     "@types/react": "~18.2.45",
     "babel-plugin-module-resolver": "^5.0.0",
     "typescript": "^5.1.3"
