--- a/package.json
+++ b/package.json
@@ -6,20 +6,25 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@react-native-picker/picker": "2.6.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@tanstack/react-query": "^5.29.2",
     "axios": "^1.6.8",
-    "expo": "~50.0.14",
+    "expo": "^50.0.17",
     "expo-secure-store": "~12.8.1",
     "expo-status-bar": "~1.11.1",
+    "jest": "^29.3.1",
+    "jest-expo": "~50.0.4",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-picker-select": "^9.1.3",
+    "react-native-reanimated": "^3.8.1",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-vector-icons": "^10.0.3"
@@ -27,8 +32,14 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@tanstack/eslint-plugin-query": "^5.28.11",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^12.4.5",
+    "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
+    "@types/react-test-renderer": "^18.0.7",
     "babel-plugin-module-resolver": "^5.0.0",
+    "jest": "^29.7.0",
+    "react-test-renderer": "^18.2.0",
     "typescript": "^5.1.3"
   },
   "private": true
